# smp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: build.yml  nix.yml
mcumgr-smp/: Cargo.toml  README.md
mcumgr-smp/src/: application_management.rs  lib.rs  os_management.rs  shell_management.rs  smp.rs  smp_framing.rs
mcumgr-smp/src/transport/: ble.rs  error.rs  mod.rs  serial.rs  smp_framing.rs  udp.rs  util.rs
mcumgr-smp/src/transport/ble/: mod.rs
mcumgr-smp/src/transport/serial/: mod.rs
mcumgr-smp/src/transport/smp/: mod.rs  smp.rs  smp_async.rs  smp_sync.rs
mcumgr-smp/src/transport/udp/: mod.rs  udp.rs  udp_async.rs  udp_sync.rs
smp-tool/: Cargo.toml  README.md
smp-tool/src/: main.rs  shell.rs
smp-tool/src/transport/: mod.rs  serial.rs  udp.rs
