[package]
name = "mcumgr-smp"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sascha Zenglein <zenglein@gessler.de>"]
description = "An implementation of the smp protocol for microcontrollers in pure rust."
readme = "README.md"
repository = "https://github.com/Gessler-GmbH/smp-rs"
homepage = "https://github.com/Gessler-GmbH/smp-rs"
categories = ["embedded", "development-tools"]
keywords = ["smp", "zephyr", "rtos", "mcumgr"]

[dependencies]
thiserror = "1.0"
tracing = "0.1"

ciborium = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }

base64 = { version = "0.21", optional = true }
crc = { version = "3.0", optional = true }

# Transports
## Transport serial
tokio-serial = { version = "5.4", optional = true }
tokio = { version = "1.21", optional = true }
pin-project-lite = "0.2"
btleplug = { version = "0.11", optional = true }
futures = { version = "0.3", optional = true }
nom = "7.1"

[features]
default = ["payload-cbor", "transports" ]
serial = ["base64", "crc", ]
payload-cbor = ["serde", "serde_bytes", "ciborium"]
transport = [ ]
transports = [ "transport-serial", "transport-udp", "transport-ble" ]
transport-serial = [ "transport", "serial", "dep:tokio-serial", "dep:tokio", "tokio/io-util" ]
transport-udp = [ "transport", "tokio/net", "tokio/time" ]
transport-ble = [ "transport", "dep:btleplug", "dep:futures" ]