[package]
name = "mcumgr-smp"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sascha Zenglein <zenglein@gessler.de>"]
description = "An implementation of the smp protocol for microcontrollers in pure rust."
readme = "README.md"
repository = "https://github.com/Gessler-GmbH/smp-rs"
homepage = "https://github.com/Gessler-GmbH/smp-rs"
categories = ["embedded", "development-tools"]
keywords = ["smp", "zephyr", "rtos", "mcumgr"]

[dependencies]
async-trait = {version = "0.1", optional = true}
base64 = {version = "0.22", optional = true}
btleplug = {version = "0.11", optional = true}
ciborium = {version = "0.2", optional = true}
crc = {version = "3.2", optional = true}
futures = {version = "0.3", optional = true}
serde = {version = "1", features = ["derive"], optional = true}
serde_bytes = {version = "0.11", optional = true}
serialport = {version = "4.5", optional = true}
thiserror = "1.0"
tokio = {version = "1.40", features = ["net"], optional = true}
uuid = {version = "1.10", optional = true}

[features]
async = ["tokio", "async-trait"]
default = [
  "transport-ble-async",
  "transport-serial",
  "transport-udp",
  "transport-udp-async",
  "payload-cbor",
]
payload-cbor = ["serde", "serde_bytes", "ciborium"]
transport-ble-async = ["uuid", "btleplug", "async", "futures"]
transport-serial = ["base64", "crc", "serialport"]
transport-udp = []
transport-udp-async = ["async", "tokio/net"]
