[package]
authors = ["Sascha Zenglein <zenglein@gessler.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "smp-tool"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcumgr-smp = {path = "../mcumgr-smp", features = ["transport-ble-async", "transport-udp-async", "transport-serial"]}

clap = {version = "4.5", features = ["derive"]}
reedline = "0.33"
regex = "1.10"
serde = "1.0"
sha2 = "0.10"
tokio = {version = "1.39", features = ["macros", "net", "rt-multi-thread"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
